<resources>
    <string name="app_name">gosocio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gosocio</string>
    <string name="nav_header_subtitle">me@atm1504.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_submit_report">Submit Report</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_reports_submitted">Reports Submitted</string>
    <string name="menu_about">About</string>
    <string name="menu_signup">Sign Up</string>

    <!-- Signup fragment-->
    <string name="name">Enter your name</string>
    <string name="email">Enter your email</string>
    <string name="phone">Enter your phone</string>
    <string name="aadhar">Enter your 13 aadhar number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_input">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_image">Select image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photo_road">Add photo of roade</string>

</resources>
