<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.atm1504.gosocio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.atm1504.gosocio.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.atm1504.gosocio.ui.signup.SignupFragment"
        android:label="@string/menu_signup"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.atm1504.gosocio.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.atm1504.gosocio.ui.share.ShareFragment"
        android:label="@string/menu_submit_report"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_reports_submitted"
        android:name="com.atm1504.gosocio.ui.SubmittedReports.SubmittedReportsFragment"
        android:label="@string/menu_reports_submitted"
        tools:layout="@layout/fragment_submitted_reports" />


    <fragment
        android:id="@+id/nav_report_details"
        android:name="com.atm1504.gosocio.ui.reportDetails.ReportDetailsFragment"
        android:label="Report"
        tools:layout="@layout/fragment_report_details" />

</navigation>